--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			}
 			</style>
 		<div class="myban">
-		    <img src = "./img/a_2000.jpg "  />
+		    <img src = "https://github.com/gao123gao/gao123gao.github.io/blob/main/a_2000.jpg "  />
 		    <img src = "./img/b_2003.jpg"  />
 			<img src = "./img/c_2006.jpg"  />
 			<img src = "./img/d_2010.jpg"  />
