--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 			}
 			</style>
 		<div class="myban">
-		    <img src = "https://github.com/gao123gao/gao123gao.github.io/blob/main/a_2000.jpg "  />
-		    <img src = "./img/b_2003.jpg"  />
-			<img src = "./img/c_2006.jpg"  />
-			<img src = "./img/d_2010.jpg"  />
-			<img src = "./img/e_2013.jpg"  />
-			<img src = "./img/f_2015.jpg"  />
-		    <img src = "./img/g_2019.jpg"  />
-			<img src = "./img/h_Selected area.jpg" />
+		    <img src = "a_2000.jpg "  />
+		    <img src = "b_2003.jpg"  />
+			<img src = "c_2006.jpg"  />
+			<img src = "d_2010.jpg"  />
+			<img src = "e_2013.jpg"  />
+			<img src = "f_2015.jpg"  />
+		    <img src = "g_2019.jpg"  />
+			<img src = "h_Selected area.jpg" />
 		
 		</div>
 	</body>
