--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 			}
 			</style>
 		<div class="myban">
-		    <img src = "a_2000.jpg "  />
-		    <img src = "b_2003.jpg"  />
-			<img src = "c_2006.jpg"  />
-			<img src = "d_2010.jpg"  />
-			<img src = "e_2013.jpg"  />
-			<img src = "f_2015.jpg"  />
-		    <img src = "g_2019.jpg"  />
-			<img src = "h_Selected area.jpg" />
+		    <img src = "images/a_2000.jpg "  />
+		    <img src = "images/b_2003.jpg"  />
+			<img src = "images/c_2006.jpg"  />
+			<img src = "images/d_2010.jpg"  />
+			<img src = "images/e_2013.jpg"  />
+			<img src = "images/f_2015.jpg"  />
+		    <img src = "images/g_2019.jpg"  />
+			<img src = "images/h_Selected area.jpg" />
 		
 		</div>
 	</body>
