--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			}
 			</style>
 		<div class="myban">
-		    <img src = "gao123gao/gao123gao.github.io/blob/974ca859b423444dd7103cc3df43c0e23c5d86d2/images/a_2000.jpg" />
+		    <img src = "images/a_2000.jpg"  />
 		    <img src = "images/b_2003.jpg"  />
 		    <img src = "images/c_2006.jpg"  />
 		    <img src = "images/d_2010.jpg"  />
